--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ header {
     flex-direction: column;
     gap: 15px;
     width: 400px;
-    padding: 40px 0px;
+    padding: 10px 0px;
 }
 
 .container-login .login .login__form .form-group {
@@ -299,6 +299,17 @@ header {
     justify-content: center;
     width: 100%;
     border-radius: 30px;
+}
+
+.container-login .login .login__form .input-validation{
+    display: none;
+}
+
+.container-login .login .login__form .input-validation.error{
+    display: block;
+    color: rgb(243, 54, 54);
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .container-login .login .login__form .form-group .login__icon {
@@ -332,22 +343,23 @@ header {
     display: flex;
     width: max-content;
     margin: 10px 0px;
+    align-items: center;
 }
 
 .container-login .login .login__form .remember-me label{
     color:#fff;     
+    font-size: 15px;
 }
 
 .container-login .login .login__form .remember-me input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
+    width: 17px;
+    height: 17px;
     margin-right: 10px;
 }
 
 .container-login .login .login__form .remember-me input[type="checkbox"]:checked{
     background-color: var(--tertiary-color) !important;
 }
-
 
 .container-login .login .login__form button {
     color: #fff;
