--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,7 @@ header {
     color: #fff;
     margin-top: 20px;
     text-transform: uppercase;
+    margin-bottom: 10px;
 }
 
 .container-login .login .login__form {
@@ -968,6 +969,23 @@ header {
     height: 100%;
 }
 
+.swiper-pagination{
+    position: static !important;
+    width: max-content !important;
+    margin: 40px auto 0px !important;
+    background-color: #fff;
+    padding: 5px 30px;
+    border-radius: 50px;
+}
+
+.swiper-pagination .swiper-pagination-bullet{
+    width: 10px;
+    height: 10px;
+    background-color: var(--tertiary-color);
+    border-radius: 50%;
+    margin: 0px 5px;
+}
+
 .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -976,6 +994,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 100%;
+    border-radius: 10px;
 }
 
 .card {
