Resolviendo cambios de compatibilidad y accesibilidad de los elementos de html, como los links sin texto adentro si no con iconos, con botones sin texto, se le pusieron un title y se agrego compatibilidad de CSS al transform

--- a/css/styles.css
+++ b/css/styles.css
@@ -994,8 +994,8 @@ header {
   text-transform: uppercase;
   text-align: center;
   line-height: 20px;
-  transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
   width: 100px;
   display: block;
   background: #982ffa;
@@ -1873,6 +1873,10 @@ header {
 #tab1 {
   display: flex;
   gap: 20px;
+}
+
+#tab2 {
+  display: none;
 }
 
 .pago-form {
