--- a/css/styles.css
+++ b/css/styles.css
@@ -20,65 +20,15 @@
 
 :root {
   --white: #fff;
-  --black: #000;
   --white-100: #dfdfdf;
-  --color-price: #0678a5;
-
-  --vulcan-50: #f5f6fa;
-  --vulcan-100: #e9ebf5;
-  --vulcan-200: #cfd4e8;
-  --vulcan-300: #a5b0d4;
-  --vulcan-400: #7486bc;
-  --vulcan-500: #5266a5;
-  --vulcan-600: #3f4f8a;
-  --vulcan-700: #344070;
-  --vulcan-800: #2e385e;
-  --vulcan-900: #2b324f;
-  --vulcan-950: #0f111c;
-
-  --turquoise-blue-50: #eafffe;
-  --turquoise-blue-100: #cbfffe;
-  --turquoise-blue-200: #9effff;
-  --turquoise-blue-300: #5bfcff;
-  --turquoise-blue-400: #00eeff;
-  --turquoise-blue-500: #00d1e5;
-  --turquoise-blue-600: #00a7c0;
-  --turquoise-blue-700: #03849b;
-  --turquoise-blue-800: #0d697d;
-  --turquoise-blue-900: #105769;
-  --turquoise-blue-950: #033a49;
-
-  --magenta-50: #fef2ff;
-  --magenta-100: #fae3ff;
-  --magenta-200: #f5c6ff;
-  --magenta-300: #f299ff;
-  --magenta-400: #ec5dff;
-  --magenta-500: #dc21ff;
-  --magenta-600: #c800ff;
-  --magenta-700: #a700cf;
-  --magenta-800: #8a00a9;
-  --magenta-900: #740689;
-  --magenta-950: #4e005e;
-
-  --blue-50: #e8f3ff;
-  --blue-100: #d5e8ff;
-  --blue-200: #b3d3ff;
-  --blue-300: #85b5ff;
-  --blue-400: #5687ff;
-  --blue-500: #2f5aff;
-  --blue-600: #0c27ff;
-  --blue-700: #001aff;
-  --blue-800: #061dcd;
-  --blue-900: #10249f;
-  --blue-950: #0a145c;
-
   --orange: #b65506;
   --black: #0f0f0f;
   --black-100: #222222;
   --black-200: #232323;
   --black-50: #393939;
-  --blue: #1f7b9c;
   --gray: #b7b7b7;
+
+  --turquoise-blue-600: #00b5ad;
 }
 
 h1,
@@ -148,10 +98,6 @@ a {
 }
 
 body {
-  min-height: 100vh;
-  background-color: var(--white);
-  background-size: cover;
-  background-position: center;
   display: flex;
   flex-direction: column;
 }
@@ -331,7 +277,6 @@ header {
 
 /* LOGIN */
 .container-login {
-  width: 100%;
   height: 100vh;
   background: var(--black);
   display: flex;
@@ -347,10 +292,10 @@ header {
   border-radius: 5px;
   flex-direction: column;
   margin-bottom: 100px;
+  width: 100%;
 }
 
 .container-login .login__image {
-  margin-right: 25px;
   width: 150px;
   height: 150px;
   background: var(--black);
@@ -415,9 +360,8 @@ header {
 .container-login .login .login__form .input-validation.error {
   display: block;
   color: rgb(243, 54, 54);
-  font-size: 14px;
-  font-weight: bold;
-  font-family: "Quicksand", sans-serif;
+  font-size: 13px;
+  font-family: "Sen", sans-serif;
 }
 
 .container-login .login .login__form .form-group .login__icon {
@@ -602,20 +546,21 @@ header {
 }
 
 .login__social .login__social-twitter {
-  background-color: #00acee;
+  background-color: #000;
   color: var(--white);
+  border: 1px solid var(--black-50);
 }
 
 .login__social .login__social-twitter:hover {
-  background-color: #0678a5;
+  background-color: #0f0f0f;
 }
 
 .login__social .login__social-facebook:hover {
-  background-color: #2d4e8e;
+  background-color: #426fca;
 }
 
 .login__social .login__social-google:hover {
-  background-color: #c1351d;
+  background-color: #f35d43;
 }
 
 .button-hamburger {
@@ -1095,7 +1040,7 @@ header {
   background-color: transparent;
   padding: 5px 30px;
   border: 1px solid var(--black-50);
-  border-radius: 50px;
+  border-radius: 5px;
 }
 
 .swiper-pagination .swiper-pagination-bullet {
@@ -1189,6 +1134,9 @@ header {
 
 .card__footer .card__footer-stars p {
   color: var(--gray);
+}
+.card__footer .card__footer-stars .starts {
+  color: var(--black-50);
 }
 
 .card__footer .card__footer-stars .starts .light {
@@ -1386,6 +1334,14 @@ header {
   width: 10%;
 }
 
+.cart-table .cart-table__col:hover {
+  background-color: var(--black-50);
+}
+
+.cart-table .cart-table__col:hover h3 {
+  color: var(--gray);
+}
+
 .cart__items {
   display: flex;
   flex-direction: column;
@@ -1417,6 +1373,10 @@ header {
   align-items: center;
   justify-content: center;
   border: none;
+}
+
+.cart__item .cart__item-minus:hover {
+  background-color: var(--black-100);
 }
 
 .cart__item .cart__item-minus svg {
@@ -1515,6 +1475,10 @@ header {
   justify-content: center;
 }
 
+.cart__item-cantidad button:hover {
+  background-color: var(--black-50);
+}
+
 .cart__item-cantidad button svg {
   width: 20px;
   height: 19px;
@@ -1586,7 +1550,7 @@ header {
 
 .cart__total .total-price {
   font-size: 22px;
-  color: var(--gray);
+  color: var(--orange);
 }
 
 .cart__button-pay {
@@ -2492,13 +2456,6 @@ footer .contenedor-footer {
 }
 
 @media (max-width: 800px) {
-  .contenedor-carousel {
-    width: 100%;
-    padding: 0px;
-    height: 200px;
-    margin-top: 200px;
-  }
-
   .contenedor-carousel .carousel-slide .carousel-slide__content {
     margin: 10px auto;
     width: 90%;
@@ -2546,7 +2503,6 @@ footer .contenedor-footer {
   }
 
   .contenedor-categorias {
-    margin-top: 200px;
     gap: 0px;
   }
 
@@ -2629,6 +2585,10 @@ footer .contenedor-footer {
 }
 
 @media (max-width: 640px) {
+  .container-login .login__image {
+    top: 120px;
+  }
+
   .container-login .login .login__title {
     font-size: 25px;
   }
@@ -2640,6 +2600,34 @@ footer .contenedor-footer {
 
   .container-login .login .login__form {
     width: 300px;
+  }
+
+  .carousel-container {
+    height: 300px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .contenedor-carousel #nextBtn {
+    position: absolute;
+    right: -10px;
+  }
+
+  .contenedor-carousel #prevBtn {
+    position: absolute;
+    left: -10px;
+  }
+
+  .contenedor-carousel .carousel-slide .carousel-slide__content {
+    width: 70%;
+  }
+
+  .contenedor-carousel .carousel-slide .carousel-slide__content h3 {
+    font-size: 12px;
+  }
+
+  .contenedor-carousel .carousel-slide .carousel-slide__content p {
+    font-size: 10px;
   }
 
   .grid-ofertas__grid-1 .grid-1__content-text h1 {
@@ -2669,16 +2657,43 @@ footer .contenedor-footer {
   .select-selected {
     width: 100px;
   }
-}
-
-@media (max-width: 425px) {
-  .grid-ofertas__grid-1 .grid-1__content-text p {
-    font-size: 10px;
-  }
 
   .contenedor-populares__title {
     display: flex;
     flex-direction: column;
     gap: 10px;
+  }
+
+  .cart__total {
+    margin: auto;
+    margin-top: 20px;
+  }
+
+  .cart__button-pay {
+    margin: auto;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 500px) {
+  .container-login .login .login__title {
+    font-size: 20px;
+  }
+
+  .container-login .login {
+    border: none;
+  }
+
+  .contenedor-carousel button svg {
+    width: 20px;
+    height: 20px;
+  }
+
+  .contenedor-carousel .carousel-slide .carousel-slide__content a {
+    width: 100%;
+  }
+
+  .grid-ofertas__grid-1 .grid-1__content-text p {
+    font-size: 10px;
   }
 }
