--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@
   --black-200: #232323;
   --black-50: #393939;
   --gray: #b7b7b7;
-
   --turquoise-blue-600: #00b5ad;
 }
 
@@ -162,7 +161,7 @@ header {
 }
 
 .nav__user .link__cart svg {
-  fill: var(--gray);
+  color: var(--gray);
 }
 
 .nav__user a span {
@@ -1757,6 +1756,7 @@ header {
   flex: 1;
   border: 1px solid var(--black-50);
   margin-top: 20px;
+  border-radius: 5px;
 }
 
 .contenedor-payment__resumen-pago h3 {
@@ -2000,6 +2000,499 @@ header {
 }
 
 /* END PAYMENT.HTML */
+
+/* PRODUCT-SINGLE.HTML */
+
+.contenedor-product-single {
+  display: flex;
+  justify-content: space-between;
+  justify-content: start;
+  margin-block: 40px;
+  gap: 40px;
+}
+
+.product-single__images {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column-reverse;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.product-single__images .product-single__images-main {
+  width: 100%;
+  height: 600px;
+  margin-top: 20px;
+  cursor: zoom-in;
+  transition: height 0.4s ease-in-out;
+}
+
+.product-single__images .product-single__images-thumbs {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  gap: 10px;
+}
+
+/*MODAL*/
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal .image-container-modal {
+  margin: auto;
+  display: flex;
+  width: 90%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  padding-block: 40px;
+  overflow: hidden;
+}
+
+.modal .image-container-modal img {
+  height: 100%;
+  object-fit: contain;
+  border-radius: 5px;
+}
+
+.close {
+  color: var(--black);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-right: 20px;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+.close svg {
+  width: 30px;
+  height: 30px;
+  color: var(--white);
+}
+
+.close:hover svg {
+  color: var(--gray);
+}
+
+/* END MODAL */
+
+.product-single__images .product-single__images-main img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.product-single__images .product-single__images-thumbs img {
+  width: 70px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.product-single__info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 1;
+  border: 1px solid var(--black-50);
+  height: 100%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border-radius: 5px;
+}
+
+.product-single__info .product-single__info-title {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 20px;
+  margin-inline: 40px;
+}
+
+.product-single__info .product-single__info-title div {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.product-single__info .product-single__info-title div h2 {
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--orange);
+}
+
+.product-single__info .product-single__info-title div p {
+  font-size: 14px;
+  color: var(--gray);
+}
+
+.product-single__info .product-single__info-price {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  margin-left: 40px;
+}
+
+.product-single__info .product-single__info-price h3 {
+  font-size: 25px;
+  font-weight: bold;
+  color: var(--orange);
+  border-bottom: 3px solid var(--orange);
+}
+
+.product-single__info .product-single__info-colors {
+  display: flex;
+  gap: 10px;
+  margin-left: 40px;
+  flex-direction: column;
+}
+
+.product-single__info .product-single__info-colors h4 {
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--orange);
+}
+
+.product-single__info-colors-color {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+}
+
+.product-single__info-colors-color .product-single__info-colors-color-item {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: var(--orange);
+  border: 1px solid var(--gray);
+}
+
+.product-single__info-colors-color-item.blue {
+  background-color: #0e3f95;
+}
+
+.product-single__info-colors-color-item.black {
+  background-color: black;
+}
+
+.product-single__info-colors-color-item.green {
+  background-color: #0bbb31;
+}
+
+.product-single__info-colors-color-item.white {
+  background-color: var(--white);
+}
+
+.product-single__info .product-single__info-sizes {
+  display: flex;
+  gap: 10px;
+  margin-left: 40px;
+  flex-direction: column;
+}
+
+.product-single__info .product-single__info-sizes h4 {
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--orange);
+}
+
+.product-single__info-sizes-size {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+}
+
+.product-single__info-sizes-size .product-single__info-sizes-size-item {
+  padding: 10px 30px;
+  border-radius: 5px;
+  background-color: transparent;
+  color: var(--white);
+  font-weight: bold;
+  border: 1px solid var(--black-50);
+  flex-wrap: wrap;
+}
+
+.product-single__info-sizes-size .product-single__info-sizes-size-item.active {
+  background-color: var(--orange);
+  border: 1px solid var(--orange);
+}
+
+.product-single__info-sizes-size
+  .product-single__info-sizes-size-item.active:hover {
+  background-color: var(--orange);
+  border: 1px solid var(--orange);
+}
+
+.product-single__info-sizes-size .product-single__info-sizes-size-item:hover {
+  background-color: var(--black-50);
+}
+
+.product-single__info .product-single__info-button-cart {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  margin-inline: 40px;
+}
+
+.product-single__info .product-single__info-button-cart button {
+  padding: 10px 20px;
+  border: 1px solid var(--gray);
+  background: transparent;
+  color: var(--gray);
+  border-radius: 20px;
+  font-size: 14px;
+  cursor: pointer;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  text-transform: uppercase;
+}
+
+.product-single__info .product-single__info-button-cart button svg {
+  width: 20px;
+  height: 20px;
+  color: var(--gray);
+}
+
+.product-single__info .product-single__info-button-cart button:hover {
+  background-color: var(--gray);
+  color: var(--black);
+}
+
+.product-single__info .product-single__info-button-cart button:hover svg {
+  color: var(--black);
+}
+
+.accordion {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 40px;
+  gap: 20px;
+}
+
+.accordion-item {
+  border-bottom: 1px solid var(--gray);
+}
+
+.accordion-header {
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  color: var(--gray);
+  padding: 10px 10px 5px 10px;
+  text-align: left;
+  cursor: pointer;
+  font-size: 18px;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 5px;
+}
+
+.accordion-header svg {
+  color: var(--gray);
+}
+
+.accordion-content {
+  height: 0px;
+  overflow: hidden;
+  transition: height 0.4s ease-in-out;
+}
+
+.accordion-content.active {
+  height: 500px;
+}
+
+.accordion-content.active {
+  color: var(--orange);
+}
+
+.accordion-header.active {
+  color: var(--orange);
+}
+
+.accordion-content .accordion-content__descripcion {
+  padding: 20px;
+  color: var(--gray);
+}
+
+.accordion-content__evaluaciones {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.accordion-content__evaluaciones .accordion-content__evaluaciones-starts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.accordion-content__evaluaciones .accordion-content__evaluaciones-starts p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  color: var(--gray);
+}
+
+.accordion-content__evaluaciones .accordion-content__evaluaciones-starts a {
+  text-decoration: none;
+  color: var(--gray);
+  font-size: 16px;
+  font-weight: bold;
+  border-bottom: 1px solid var(--gray);
+}
+
+.accordion-content__evaluaciones
+  .accordion-content__evaluaciones-starts
+  a:hover {
+  color: var(--orange);
+  border-bottom: 1px solid var(--orange);
+}
+
+.accordion-content__evaluaciones .accordion-content__evaluaciones-starts p svg {
+  width: 20px;
+  height: 20px;
+  color: var(--orange);
+}
+
+.accordion-content__evaluaciones button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 6px 10px;
+  border: 1px solid var(--gray);
+  color: var(--gray);
+  background-color: transparent;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.accordion-content__evaluaciones button svg {
+  width: 20px;
+  height: 20px;
+  color: var(--gray);
+}
+
+.accordion-content__evaluaciones button:hover {
+  background-color: var(--gray);
+  color: var(--black);
+}
+
+.accordion-content__evaluaciones button:hover svg {
+  color: var(--black);
+}
+
+.accordion-content .accordion-content__preguntas {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+
+.accordion-content .accordion-content__preguntas li {
+  list-style: none;
+}
+
+.accordion-content .accordion-content__preguntas li a {
+  color: var(--gray);
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  position: relative;
+}
+
+.accordion-content .accordion-content__preguntas li a svg {
+  width: 20px;
+  height: 20px;
+  color: var(--gray);
+}
+
+.accordion-content .accordion-content__preguntas li a:hover {
+  color: var(--orange);
+}
+
+.accordion-content .accordion-content__preguntas li a:hover svg {
+  color: var(--orange);
+}
+
+.accordion-content .accordion-content__preguntas li a::before {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  left: 100%;
+  width: 0;
+  height: 2px;
+  background-color: var(--orange);
+  transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+}
+
+.accordion-content .accordion-content__preguntas li a:hover::before {
+  width: 100%;
+  left: 0;
+}
+
+.contenedor-relacionados {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.contenedor-relacionados .contenedor-relacionados__title {
+  display: flex;
+  padding-bottom: 10px;
+  justify-content: space-between;
+  border-bottom: 3px solid var(--orange);
+  margin-bottom: 20px;
+}
+
+.contenedor-relacionados__title > h2 {
+  font-size: 35px;
+  font-weight: bold;
+  color: var(--orange);
+  text-align: left;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+/* END PRODUCT-SINGLE.HTML */
 
 /* FOOTER */
 
@@ -2284,9 +2777,37 @@ footer .contenedor-footer {
     width: 20%;
   }
 
+  .product-single__info .product-single__info-title {
+    flex-direction: column;
+  }
+
+  .product-single__info .product-single__info-price {
+    margin-left: 0px;
+  }
+
   .footer__copy {
     flex-direction: column;
     gap: 10px;
+  }
+}
+
+@media (max-width: 1130px) {
+  .accordion-content__evaluaciones {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .accordion-content__evaluaciones .accordion-content__evaluaciones-starts {
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .accordion-content__evaluaciones button {
+    width: 100%;
+  }
+
+  .product-single__info-sizes-size .product-single__info-sizes-size-item {
+    padding: 10px 20px;
   }
 }
 
@@ -2347,6 +2868,10 @@ footer .contenedor-footer {
   .pago-form .form-pago__group.inputs-2 {
     flex-direction: column;
     gap: 15px;
+  }
+
+  .contenedor-product-single {
+    flex-direction: column;
   }
 
   .footer__social {
